--- a/css/stylesInicio.css
+++ b/css/stylesInicio.css
@@ -331,6 +331,8 @@
     color: white !important;
 }
 
+
+
 /* Responsiveness */
 @media (max-width: 576px) {
     #servicios h2 {
@@ -371,6 +373,15 @@
 
     #servicios i {
         font-size: 3rem;
+    }
+    .espacioCardServ{
+        min-height: 110px;
+    }
+}
+
+@media (min-width: 1440px) {
+    .espacioCardServ{
+        min-height: auto;
     }
 }
 
