--- a/css/stylesNosotros.css
+++ b/css/stylesNosotros.css
@@ -4,7 +4,7 @@ main {
 
 /* Hero Section */
 .hero-nosotros {
-    background: url('../images/vistaNosotros/CasaLD-08.jpeg') center/cover no-repeat;
+    background: url('../images/vistaNosotros/pruebaPortadaNosotros.jpg') center/cover no-repeat;
     height: 100vh;
     display: flex;
     align-items: center;
