--- a/css/stylesGen.css
+++ b/css/stylesGen.css
@@ -17,6 +17,16 @@ main {
     padding-top: 3rem;
 }
 
+section {
+    opacity: 0;
+    transform: translateY(50px); /* Efecto de entrada inicial */
+    transition: opacity 0.5s ease, transform 0.5s ease; /* Suaviza la transición */
+}
+
+section.animate__animated {
+    opacity: 1;
+    transform: translateY(0); /* Vuelve a su posición original */
+}
 
 
 /* •----------------Navbar----------------• */
