cambios form contacto propiedades

--- a/css/stylesNosotros.css
+++ b/css/stylesNosotros.css
@@ -571,10 +571,10 @@ main {
    color: #71C6D4;
 }
 
-#wpContactoBoton {
+/* #wpContactoBoton {
     color: #1bac91 !important;
     font-size: 1.5rem !important;
-}
+} */
 
 .botonSecNosotrosForm a {
     margin-top: 0.2rem;
