--- a/css/stylesPropiedades.css
+++ b/css/stylesPropiedades.css
@@ -185,18 +185,22 @@
 #propiedades .swiper-container {
     width: 100%;
     height: auto;
-    /* Altura ajustable del carousel */
     border-bottom: 1px solid #dddddd;
+   
 }
 
-
+#propiedades .swiper-slide{
+    background-color: #F0F0F0 !important;
+   
+}
 
 #propiedades .swiper-slide img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 350px;
+    object-fit: contain;
     object-position: center;
-    border-radius: 0;
+    border-radius: 10px;
+   
 }
 
 #propiedades .swiper-pagination {
@@ -288,11 +292,11 @@
 
 .swiper-button-next {
     right: -5px;
-    top: 38%;
+    top: 50%;
 }
 .swiper-button-prev {
     left: -5px;
-    top: 38%;
+    top: 50%;
    
 }
 
@@ -465,10 +469,16 @@
     overflow: hidden;
 }
 
+#propertyDetailsContent .swiper-slide {
+    background-color:#F0F0F0 ;
+}
+
 #propertyDetailsContent .swiper-slide img {
-    object-fit: cover;
     width: 100%;
-    height: 100%;
+    height: auto;
+    max-height: 70vh;
+    object-fit: contain;
+    object-position: center;
     border-radius: 10px;
 }
 
@@ -531,7 +541,7 @@
     background-color: #ffcc80 !important;
 }
 
-/* Responsive Styles */
+
 @media (max-width: 768px) {
     #propertyDetailsContent h3 {
         font-size: 1.2rem;
@@ -544,9 +554,7 @@
     #propertyDetailsContent .btn {
         font-size: 0.9rem;
     }
-
     
-
 }
 
 
@@ -555,9 +563,9 @@
 #propertyDetailsContent .swiper-button-next,
 #propertyDetailsContent .swiper-button-prev {
     background-color: rgba(0, 0, 0, 0.6) !important; 
-    color: #ffcc80; /* Color del icono */
-    border-radius: 50%; /* Forma circular */
-    width: 40px; /* Tamaño del botón */
+    color: #ffcc80; 
+    border-radius: 50%; 
+    width: 40px;
     height: 40px;
     display: flex;
     justify-content: center;
@@ -567,24 +575,23 @@
 
 #propertyDetailsContent .swiper-button-next:hover,
 #propertyDetailsContent .swiper-button-prev:hover {
-    background-color: #71c6d4; /* Cambia el fondo al pasar el cursor */
-    transform: scale(1.1); /* Efecto de zoom */
+    background-color: #71c6d4; 
+    transform: scale(1.1); 
 }
 
-/* Posicionar los botones */
+
 #propertyDetailsContent .swiper-button-next {
-    right: -5px; /* Ajusta la posición desde el borde derecho */
-    top: 35%; /* Centra verticalmente */
+    right: -5px;
+    top: 35%; 
     
 }
 
 #propertyDetailsContent .swiper-button-prev {
-    left: -5px; /* Ajusta la posición desde el borde izquierdo */
-    top: 35%; /* Centra verticalmente */
+    left: -5px; 
+    top: 35%; 
    
 }
 
-/* Asegurarse de que no afecten otros Swipers */
 #propertyDetailsContent .swiper-button-next,
 #propertyDetailsContent .swiper-button-prev {
     background-color: rgba(0, 0, 0, 0.6); 
@@ -598,8 +605,6 @@
     transition: transform 0.3s ease, background-color 0.3s ease;
     z-index: 3;
 }
-
-
 
 
 
@@ -620,13 +625,13 @@
     background: linear-gradient(135deg, rgba(90, 78, 78, 0.9), rgba(136, 120, 120, 0.8), rgba(113, 198, 212, 0.7));
     background-size: 400% 400%;
     animation: gradientAnimation 10s ease infinite;
-    color: white; /* Texto blanco para buena legibilidad */
+    color: white; 
     padding: 2rem;
-    border-radius: 8px; /* Opcional: esquinas redondeadas */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); /* Sombra moderna */
-    backdrop-filter: blur(8px); /* Efecto de Blur */
-    -webkit-backdrop-filter: blur(8px); /* Compatibilidad para Safari */
-    border: 1px solid rgba(255, 255, 255, 0.2); /* Borde semitransparente opcional */
+    border-radius: 8px;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25); 
+    backdrop-filter: blur(8px); 
+    -webkit-backdrop-filter: blur(8px); 
+    border: 1px solid rgba(255, 255, 255, 0.2); 
 }
 
 #contacto .btn {
