--- a/css/stylesInicio.css
+++ b/css/stylesInicio.css
@@ -515,9 +515,10 @@
 
 #propiedades .swiper-slide img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 0;
+    height: 350px;
+    object-fit: contain;
+    object-position: center;
+    border-radius: 10px;
 }
 
 #propiedades .swiper-pagination {
@@ -626,12 +627,12 @@
 
 #propiedades .swiper-button-next {
     right: -5px;
-    top: 38%;
+    top: 50%;
 }
 
 #propiedades .swiper-button-prev {
     left: -5px;
-    top: 38%;
+    top: 50%;
 
 }
 
@@ -792,9 +793,11 @@
 }
 
 #propertyDetailsContent .swiper-slide img {
-    object-fit: cover;
     width: 100%;
-    height: 100%;
+    height: auto;
+    max-height: 70vh;
+    object-fit: contain;
+    object-position: center;
     border-radius: 10px;
 }
 
