--- a/css/stylesInicio.css
+++ b/css/stylesInicio.css
@@ -20,7 +20,7 @@
     width: 100%;
     height: 100vh;
     object-fit: cover;
-    filter: brightness(0.8);
+    filter: brightness(0.9);
 }
 
 .hero-content {
@@ -39,11 +39,13 @@
     line-height: 1.2;
     font-family: 'nunito', sans-serif;
     font-weight: 700;
+    text-shadow: #000000 5px 3px 10px;
 }
 
 .hero-content p {
     font-size: 1.2rem;
     margin-top: 1rem;
+    text-shadow: #000000 5px 3px 10px;
 }
 
 .hero-content a {
