--- a/css/stylesPropiedades.css
+++ b/css/stylesPropiedades.css
@@ -724,3 +724,11 @@
 #contacto button {
     margin-top: 2rem;
 }
+
+
+@media (max-width:768px){
+    #contacto{
+        
+        background-position: left bottom;
+    }
+}
