correccion alineacion img bg cont prop

--- a/css/stylesPropiedades.css
+++ b/css/stylesPropiedades.css
@@ -732,3 +732,10 @@
         background-position: left bottom;
     }
 }
+
+@media (max-width:576px){
+    #contacto{
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+}
